--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="already_registered">Already Registered? </string>
     <string name="welcome_user">Welcome User</string>
     <string name="sign_in">sign in</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
