--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,37 @@
     <string name="sign_in">sign in</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="contact_form">Contact Us</string>
+    <string name="dashboard">Dashboard</string>
+
+
+    <string name="contact_form_name">Your Name</string>
+    <string name="contact_form_email">Your Email</string>
+    <string name="contact_form_subject">Subject</string>
+    <string name="contact_form_message">Message</string>
+    <string name="contact_form_button">Send\ Message</string>
+    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
+    <string name="contact_posted">Your message has been successfully delivered.</string>
+    <string name="title_activity_main3">MainActivity3</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Dashboard</string>
+    <string name="menu_case">case</string>
+    <string name="menu_lawyers">lawyers</string>
+    <string name="menu_client">client</string>
+    <string name="menu_schedule">schedule</string>
+    <string name="menu_update">update</string>
+    <string name="menu_contactus">contact us</string>
+
+
+    <string name="title_activity_navigationbar">navigationbar</string>
+    <string name="menu_contact_us">Contact us</string>
+    <string name="menu_about_us">Aboout us</string>
 
 
 </resources>
